@@ -18,6 +18,7 @@ package com.badlogic.gdx.backends.lwjgl3;
 
 import java.nio.IntBuffer;
 
+import com.badlogic.gdx.*;
 import org.lwjgl.BufferUtils;
 import org.lwjgl.glfw.GLFW;
 import org.lwjgl.glfw.GLFWDropCallback;
@@ -28,10 +29,6 @@ import org.lwjgl.glfw.GLFWWindowIconifyCallback;
 import org.lwjgl.glfw.GLFWWindowMaximizeCallback;
 import org.lwjgl.glfw.GLFWWindowRefreshCallback;
 
-import com.badlogic.gdx.Application;
-import com.badlogic.gdx.ApplicationListener;
-import com.badlogic.gdx.Gdx;
-import com.badlogic.gdx.Files;
 import com.badlogic.gdx.graphics.Pixmap;
 import com.badlogic.gdx.utils.Array;
 import com.badlogic.gdx.utils.Disposable;
@@ -40,6 +37,7 @@ import com.badlogic.gdx.utils.SharedLibraryLoader;
 public class Lwjgl3Window implements Disposable {
 	private long windowHandle;
 	final ApplicationListener listener;
+	private final Array<LifecycleListener> lifecycleListeners;
 	final Lwjgl3ApplicationBase application;
 	private boolean listenerInitialized = false;
 	Lwjgl3WindowListener windowListener;
@@ -62,9 +60,24 @@ public class Lwjgl3Window implements Disposable {
 				public void run () {
 					if (windowListener != null) {
 						if (focused) {
+							if (config.pauseWhenLostFocus) {
+								synchronized (lifecycleListeners) {
+									for (LifecycleListener lifecycleListener : lifecycleListeners) {
+										lifecycleListener.resume();
+									}
+								}
+							}
 							windowListener.focusGained();
 						} else {
 							windowListener.focusLost();
+							if (config.pauseWhenLostFocus) {
+								synchronized (lifecycleListeners) {
+									for (LifecycleListener lifecycleListener : lifecycleListeners) {
+										lifecycleListener.pause();
+									}
+								}
+								listener.pause();
+							}
 						}
 						Lwjgl3Window.this.focused = focused;
 					}
@@ -84,9 +97,23 @@ public class Lwjgl3Window implements Disposable {
 					}
 					Lwjgl3Window.this.iconified = iconified;
 					if (iconified) {
-						listener.pause();
+						if (config.pauseWhenMinimized) {
+							synchronized (lifecycleListeners) {
+								for (LifecycleListener lifecycleListener : lifecycleListeners) {
+									lifecycleListener.pause();
+								}
+							}
+							listener.pause();
+						}
 					} else {
-						listener.resume();
+						if (config.pauseWhenMinimized) {
+							synchronized (lifecycleListeners) {
+								for (LifecycleListener lifecycleListener : lifecycleListeners) {
+									lifecycleListener.resume();
+								}
+							}
+							listener.resume();
+						}
 					}
 				}
 			});
@@ -156,8 +183,10 @@ public class Lwjgl3Window implements Disposable {
 		}
 	};
 
-	Lwjgl3Window (ApplicationListener listener, Lwjgl3ApplicationConfiguration config, Lwjgl3ApplicationBase application) {
+	Lwjgl3Window (ApplicationListener listener, Array<LifecycleListener> lifecycleListeners, Lwjgl3ApplicationConfiguration config,
+		Lwjgl3ApplicationBase application) {
 		this.listener = listener;
+		this.lifecycleListeners = lifecycleListeners;
 		this.windowListener = config.windowListener;
 		this.config = config;
 		this.application = application;
